--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "ts-node prisma/seed.ts",
-    "build": "rimraf dist && npx tsc",
-    "start": "node index.ts",
+    "build": "rimraf dist && npx tsc",  
+    "start": "node dist/index.js",  
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\""
   },
   "keywords": [],
@@ -30,8 +30,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
-    "nodeman": "^1.1.2",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.9",  
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
