--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2016",     
-    "module": "nodenext",                               
-    "outDir": "dist",                                   /* Specify an output folder for all emitted files. */
-    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+    "outDir": "./dist",  // Compiled files will be saved here
+    "rootDir": "./src",  // Source files are in the src folder
+    "target": "ES6",
+    "module": "NodeNext",
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,
-    "rootDir": "./src",
     "moduleResolution": "nodenext" ,                            /* Skip type checking all .d.ts files. */
     "resolveJsonModule": true, // Allow importing JSON files
     "declaration": true,     // Generate declaration files (.d.ts)
     "sourceMap": true        // 
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
